[package]
name = "brainfuck-interpreter"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A fast and efficient Brainfuck interpreter written in Rust"
license = "MIT"
repository = "https://github.com/yourusername/brainfuck-interpreter-rust"
keywords = ["brainfuck", "interpreter", "esoteric", "programming-language"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
